# EEConnect

./: .gitignore  CMakeLists.txt  README.rst  compass.yml  eeconnect.service  nl.een.eeconnect.conf
.github/: CODEOWNERS
.github/workflows/: claude-auto-review.yml
client_confs/: client.json
cmake/: FindLibMnl.cmake  FindProtobufC.cmake  FindRapidJSON.cmake  embed.cmake  gitversion.cmake  libmnl.cmake  openssl_static.cmake  options.cmake  protobufc.cmake  rapidjson.cmake
proto/: CMakeLists.txt  packets.proto
server_confs/: server.json
src/: CMakeLists.txt  client.c  client_config.cpp  client_config.h  pnp_address.c  pnp_address.h  pnp_address_typedef.h  pnp_buffer.c  pnp_buffer.h  pnp_channel.c  pnp_channel.h  pnp_cmd.c  pnp_cmd.h  pnp_cmd_type.h  pnp_common.h  pnp_configuration.c  pnp_configuration.h  pnp_connection.c  pnp_connection.h  pnp_connection_proxy.c  pnp_connection_proxy.h  pnp_connection_state.h  pnp_connection_typedef.h  pnp_dbus.c  pnp_dbus.h  pnp_hwaddr.c  pnp_hwaddr.h  pnp_io.h  pnp_io_plain.c  pnp_io_ssl.c  pnp_mapport.c  pnp_mapport.h  pnp_protobuf_utils.c  pnp_protobuf_utils.h  pnp_server_addresses.c  pnp_server_addresses.h  pnp_thread_helper.h  server.c  server_config.cpp  server_config.h
test/: Makefile.test  pnp_protobuf_utils_utest.c
tools/: pnp_dissector.lua
tools/embed/: embed.h  embed.py
